Trying to fix wrong navbar styling on Safari

--- a/book-store-frontend/src/components/header/Header.css
+++ b/book-store-frontend/src/components/header/Header.css
@@ -19,6 +19,8 @@
 .navbar-container {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     background-color: #191919;
+    position: sticky;
+    position: -webkit-sticky;
 }
 
 .navbar-brand-custom {
